unpackaged/main/default/objects/Case/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>