unpackaged/main/default/objects/Case/fields/Status1__c.field-meta.xml
<CustomField>
    <fullName>Status1__c</fullName>
    <formula>(IF( Loan_Amount__c &lt;  Mortgage_asset_value__c ,"Qualified","Unqualified"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status1</label>
    <type>Text</type>
</CustomField>