unpackaged/main/default/objects/Case/validationRules/loan_amount_should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>loan_amount_should_be_greater_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>(Loan_Amount__c)&gt;5000</errorConditionFormula>
    <errorDisplayField>Loan_Amount__c</errorDisplayField>
    <errorMessage>Loan amount should not be less than 0</errorMessage>
</ValidationRule>