unpackaged/main/default/objects/Case/validationRules/Loan_Amount_should_be_less_than_Mortg.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Amount_should_be_less_than_Mortg</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Loan_Amount__c)</errorConditionFormula>
    <errorDisplayField>Loan_Amount__c</errorDisplayField>
    <errorMessage>Loan AMount should not be blank</errorMessage>
</ValidationRule>